// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTitle correctly renders default markup 1`] = `
<h1
  className="page-title title-class"
>
  Page Title
</h1>
`;

exports[`PageTitle correctly renders hidden mode markup 1`] = `
<h1
  className="page-title visually-hidden title-class"
>
  Page Title
</h1>
`;
